# stride_eqn

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .stride-data-ref  PALETTE_REDESIGN.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: index.md.txt
_sources/explanation/: customizing_checks.md.txt  data_download.md.txt  data_validation.md.txt  dbt_computation.md.txt  index.md.txt  weather_year_modeling.md.txt
_sources/how_tos/: compare_scenarios.md.txt  download_datasets.md.txt  export_results.md.txt  index.md.txt  override_calculated_tables.md.txt
_sources/how_tos/getting_started/: index.md.txt
_sources/reference/: cli_reference.md.txt  data_api.md.txt  index.md.txt  project_api.md.txt
_sources/tutorials/: create_project.md.txt  data_api_tutorial.md.txt  dbt_project.md.txt  debugging_stride.md.txt  index.md.txt  manage_calculated_tables.md.txt
docs/how_tos/: customize_palette.md  launch_dashboard.md
explanation/: customizing_checks.html  data_download.html  data_validation.html  dbt_computation.html  index.html  weather_year_modeling.html
how_tos/: compare_scenarios.html  customize_palette.html  download_datasets.html  export_results.html  index.html  launch_dashboard.html  override_calculated_tables.html
how_tos/getting_started/: index.html
reference/: cli_reference.html  data_api.html  index.html  project_api.html
src/stride/: __init__.py  config.py  dataset_download.py  dsgrid_integration.py  models.py  project.py
src/stride/api/: __init__.py
src/stride/cli/: stride.py
src/stride/dbt/: energy_projection_annual_scenario_placeholder.sql
src/stride/dbt/models/: calibrated_load_shapes.sql  energy_projection_com_ind_tra_load_shapes.sql  energy_projection_res_load_shapes.sql  sources.yml
src/stride/ui/: app.py  color_manager.py  palette.py  palette_utils.py  project_manager.py  tui.py
src/stride/ui/assets/: dark-theme.css  light-theme.css  theme-detector.js
src/stride/ui/home/: callbacks.py  layout.py
src/stride/ui/plotting/: __init__.py  facets.py  simple.py  utils.py
src/stride/ui/scenario/: callbacks.py
src/stride/ui/settings/: callbacks.py  layout.py
tests/: test_api.py  test_app_cache.py  test_calibration.py  test_calibration_timestamp_v2.py  test_custom_demand.py  test_energy_projection.py  test_project.py
tests/data/: calibration_germany_2019_8760.csv  ev_load_shape_8760.csv
tests/palette/: test_auto_color.py  test_color_manager_update.py  test_palette.py  test_palette_init.py  test_palette_merge.py  test_palette_override.py  test_palette_override_integration.py  test_rgb_color_format.py  test_save_user_palette.py  test_settings_categories.py  test_tol_palettes.py
tutorials/: create_project.html  data_api_tutorial.html  dbt_project.html  debugging_stride.html  index.html  manage_calculated_tables.html
