[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stride-load-forecast"
version = "1.0.0"
description = "Python tool for assembling annual hourly electricity demand projections suitable for grid planning at the country-level."
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { file = "LICENSE" }
keywords = []
authors = [
    { name = "Daniel Thom", email = "daniel.thom@nrel.gov" },
    { name = "Elaine Hale", email = "elaine.hale@nrel.gov" },
    { name = "Micah Webb", email = "micah.webb@nrel.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click",
    "dash>=4.0.0, <5",
    "dash-bootstrap-components>=2.0.3",
    "dbt-core >= 1.10.5, < 2",
    "dbt-duckdb",
    "dsgrid-toolkit >= 0.3.3, < 0.4.0",
    "duckdb >= 1.1, < 2",
    "loguru",
    "pandas>=2.2,<3",
    "plotly>=6.2.0",
    "pyarrow",
    "pydantic >= 2.7, < 3",
    "rich",
    "textual>=0.47.0",
]
[project.optional-dependencies]

dev = [
    "mypy ~= 1.17.1", # Sync with .pre-commit-config.yaml.
    "pandas-stubs",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pyyaml",
    "ruff",
    "furo",
    "myst_parser",
    "sphinx >=8, <9",  # 9.1.0 has an incompatibility with sphinx-tabs
    "sphinx-click",
    "autodoc_pydantic~=2.0",
    "sphinx-copybutton",
    "sphinx-tabs~=3.4",
    "plotly-stubs>=0.0.6",
]

[project.urls]
Documentation = "https://github.com/dsgrid/stride#readme"
Issues = "https://github.com/dsgrid/stride/issues"
Source = "https://github.com/dsgrid/stride"

[project.scripts]
stride = "stride.cli.stride:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/stride"]

[tool.mypy]
files = [
  "src",
  "tests",
]
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "dsgrid.*",
  "plotly.*",
  "dash.*",
  "dash_bootstrap_components.*",
  "pyarrow",
]

[[tool.mypy.overrides]]
# Ignore type errors in UI layout files due to complex dash component types
ignore_errors = true
module = [
  "stride.ui.home.layout",
  "stride.ui.scenario.layout",
]

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "_build",
    "build",
    "dist",
    "env",
    "venv",
]

line-length = 99
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "C901",   # McCabe complexity
    "E4",     # Subset of pycodestyle (E)
    "E7",
    "E9",
    "EM",     # string formatting in an exception message
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.hatch]
metadata.allow-direct-references = true
